CLDR-1940 add IntHash caching support and testing
X-SVN-Rev: 3721